Fixed Gate doc’s “this” links.

--- a/Circuit.html
+++ b/Circuit.html
@@ -475,15 +475,15 @@ q5  |0⟩───○──┤ X ├───○───┤ M │
 				Check back in November 2019.
 			</p>
 			<hr>
-			<h3 id="Constructor">Constructor</h3>
+			<h3>Constructor</h3>
 			<p>
 				Description TK.
 			</p>
-			<h3 id="Constants">Constants</h3>
+			<h3>Static constants</h3>
 			<p>
 				Description TK.
 			</p>
-			<h3 id="Static_properties">Static properties</h3>
+			<h3>Static properties</h3>
 			<ul class="properties">
 				<li>
 					<dt id=".index">index</dt>
