Footers, font face variables, keywords.

--- a/index.html
+++ b/index.html
@@ -6,19 +6,21 @@
 		<meta name="description"          content="Q.js is quantum computing in your browser.">
 		<meta name="copyright"            content="Stewart Smith 2019">
 		<meta name="keywords"             content="
-
+			Q, Q.js, Qjs,
 			quantum, quantum physics, quantum mechanics, superposition,
-			quantum computer, quantum computing, qubit, qbit, gate, Hadamard,
-			Google, IBM, Microsoft, NASA, 
-			DWave, D-Wave,
+			quantum computer, quantum computer programming, quantum computing, QC, 
+			quantum simulator, quantum computer simulator, 
+			qubit, qbit, gate, Hadamard, Bloch, Bloch Sphere,
+			Web, Web site, website, Web browser, browser, HTML, HTML5, JavaScript, ES6, CSS,
+			Chrome, Firefox, Safari, Opera, Brave, Edge, WebKit, Blink,
+			Stewart Smith, Stewart, Stew, Stuart, Steven, Steve, Stewdio, stew_rtsmith, @stew_rtsmith,
+			Moar, Moar Technologies Corp, MTC,
+			Google, IBM, Microsoft, NASA, DWave, D-Wave,
 			Quil, OpenQASM,
 				ProjectQ, Qiskit, 
 				Quantum Development Kit, Cirq, Strawberry Fields, t|ket>,
 				QCL, Quantum pseudocode, Q#, Q|SI>, Q language, qGCL, QFC, QML, LIQUi|>, Quipper,
-			Stanford CS 269 Q: Quantum Computer Programming,
-			Web, Web site, website, Web browser, browser, HTML, HTML5, JavaScript, ES6, CSS,
-			Stewart Smith, Stewart, Stew, Stuart, Steven, Steve, Stewdio, stew_rtsmith, @stew_rtsmith,
-			Moar, Moar Technologies Corp, MTC,">
+			Stanford CS 269 Q: Quantum Computer Programming">
 
 		<meta name="twitter:card"         content="summary">
 		<meta name="twitter:site"         content="@stew_rtsmith">
@@ -334,7 +336,19 @@ cat.<a href="ComplexNumber.html#.toText">toText</a>()   <span class="comment">//
 
 cat.<a href="ComplexNumber.html#.add$"><strong>add$</strong></a>( dog )<span class="comment">//  Destructive. Note the ‘$’ suffix.</span>
 cat.<a href="ComplexNumber.html#.toText">toText</a>()   <span class="comment">//  Now returns '4 - 2i'</span>
-</pre></code>			
+</pre></code>
+			<hr>
+			<footer>
+				<p class="keywords">
+					<strong>Keywords</strong>.
+					Q, Q.js, Qjs,
+					quantum, quantum physics, quantum mechanics, superposition,
+					quantum computer, quantum computer programming, quantum computing, QC, 
+					quantum simulator, quantum computer simulator, 
+					qubit, qbit, gate, Hadamard, Bloch, Bloch Sphere,
+					Web, Web site, website, Web browser, browser, HTML, HTML5, JavaScript, ES6, CSS.
+				</p>
+			</footer>
 		</main>
 		<script>
 
