--- a/Q.html
+++ b/Q.html
@@ -52,7 +52,7 @@
 	</head>
 	<body>
 		<main>
-			<h3>The <code>Q</code> object</h3>
+			<h3>The Q object</h3>
 			<p>
 				The root of Q.js is the <code>Q</code> object.
 				It provides a single point for attaching all other Q.js functionality to, 
@@ -116,7 +116,7 @@ var circuit = Q`
 						if the current value of <code><a href="#.verbosity">verbosity</a></code> 
 						is greater than or equal to the <code>verbosityThreshold</code> argument.
 					</dd>
-				</li>				
+				</li>
 				<li>
 					<dt id=".warn">warn</dt>
 					<dd>
