Testing fix for iOS scaling.

--- a/ComplexNumber.html
+++ b/ComplexNumber.html
@@ -21,6 +21,7 @@
 				Quantum Development Kit, Cirq, Strawberry Fields, t|ket>,
 				QCL, Quantum pseudocode, Q#, Q|SI>, Q language, qGCL, QFC, QML, LIQUi|>, Quipper,
 			Stanford CS 269 Q: Quantum Computer Programming">
+		<meta name="viewport"             content="width=device-width; initial-scale=1.0;">
 
 		<meta name="twitter:card"         content="summary">
 		<meta name="twitter:site"         content="@stew_rtsmith">
@@ -525,42 +526,58 @@ cat.<a href="#this.index">index</a> === dog.<a href="#.prototype.index">index</a
 					<dt id=".prototype.reduce">reduce</dt>
 					<dd>
 						<code class="value-type">Function</code>
-						Description TK. May return a <code>Number</code> value, thereby preventing <a href="https://en.wikipedia.org/wiki/Method_chaining" target="_blank">method chaining</a>.
+						Description TK. May return a <code>Number</code> value, thereby preventing <a href="https://en.wikipedia.org/wiki/Method_chaining" target="_blank">function chaining</a>.
 					</dd>
 				</li>
 				<li>
 					<dt id=".prototype.isNaN">isNaN</dt>
 					<dd>
-						<code class="value-type">Function</code>
-						Description TK. Will return a <code>Boolean</code> value, thereby preventing <a href="https://en.wikipedia.org/wiki/Method_chaining" target="_blank">method chaining</a>.
+						<code class="value-type">Function ⇒ Boolean</code>
+						Calls and returns the result of the
+						<code><a href="#.isNaN">isNaN</a></code>
+						static function, passing the calling instance as the argument.
+						Will return a <code>Boolean</code> value, thereby preventing <a href="https://en.wikipedia.org/wiki/Method_chaining" target="_blank">function chaining</a>.
 					</dd>
 				</li>
 				<li>
 					<dt id=".prototype.isZero">isZero</dt>
 					<dd>
-						<code class="value-type">Function</code>
-						Description TK. Will return a <code>Boolean</code> value, thereby preventing <a href="https://en.wikipedia.org/wiki/Method_chaining" target="_blank">method chaining</a>.
+						<code class="value-type">Function ⇒ Boolean</code>
+						Calls and returns the result of the
+						<code><a href="#.isZero">isZero</a></code>
+						static function, passing the calling instance as the argument.
+						Will return a <code>Boolean</code> value, thereby preventing <a href="https://en.wikipedia.org/wiki/Method_chaining" target="_blank">function chaining</a>.
 					</dd>
 				</li>
 				<li>
 					<dt id=".prototype.isFinite">isFinite</dt>
 					<dd>
-						<code class="value-type">Function</code>
-						Description TK. Will return a <code>Boolean</code> value, thereby preventing <a href="https://en.wikipedia.org/wiki/Method_chaining" target="_blank">method chaining</a>.
+						<code class="value-type">Function ⇒ Boolean</code>
+						Calls and returns the result of the
+						<code><a href="#.isFinite">isFinite</a></code>
+						static function, passing the calling instance as the argument.
+						Will return a <code>Boolean</code> value, thereby preventing <a href="https://en.wikipedia.org/wiki/Method_chaining" target="_blank">function chaining</a>.
 					</dd>
 				</li>
 				<li>
 					<dt id=".prototype.isInfinite">isInfinite</dt>
 					<dd>
-						<code class="value-type">Function</code>
-						Description TK. Will return a <code>Boolean</code> value, thereby preventing <a href="https://en.wikipedia.org/wiki/Method_chaining" target="_blank">method chaining</a>.
+						<code class="value-type">Function ⇒ Boolean</code>
+						Calls and returns the result of the
+						<code><a href="#.isInfinite">isInfinite</a></code>
+						static function, passing the calling instance as the argument.
+						Will return a <code>Boolean</code> value, thereby preventing <a href="https://en.wikipedia.org/wiki/Method_chaining" target="_blank">function chaining</a>.
 					</dd>
 				</li>
 				<li>
 					<dt id=".prototype.isEqualTo">isEqualTo</dt>
 					<dd>
-						<code class="value-type">Function</code>
-						Description TK. Will return a <code>Boolean</code> value, thereby preventing <a href="https://en.wikipedia.org/wiki/Method_chaining" target="_blank">method chaining</a>.
+						<code class="value-type">Function( n: Number or <a href="Q.html">Q</a>.ComplexNumber ) ⇒ Boolean</code>
+						Calls and returns the result of the
+						<code><a href="#.areEqual">areEqual</a></code>
+						static function, passing the calling instance as the first argument
+						and <code>n</code> as the second argument.
+						Will return a <code>Boolean</code> value, thereby preventing <a href="https://en.wikipedia.org/wiki/Method_chaining" target="_blank">function chaining</a>.
 					</dd>
 				</li>
 				<li>
